tests/errors/syntax_errors/nargs.py
# An undefined number of input arguments is not covered by Pyccel
# pylint: disable=missing-function-docstring, missing-module-docstring

def f(*args):
    pass
